--- a/app/views/shared/_show_of_step.html.erb
+++ b/app/views/shared/_show_of_step.html.erb
@@ -1,11 +1,13 @@
 
+
 <p class="step-popup-description"><%= step.description %><p>
 <% if step.photos.any?  %>
-  <div class="image-popup-container">
+  <div class="image-popup-row">
     <% step.photos.each do |photo| %>
-    <%= cl_image_tag photo.image, height: 200, width: 300, crop: :fill, class: 'popup-image-item'%>
+      <div class="image-popup-column">
+        <%= cl_image_tag photo.image, height: 200, width: 300, crop: :fill, class: 'popup-image-item'%>
+      </div>
     <% end %>
   </div>
-  <% end %>
-
+<% end %>
 
