organizations halfway through

--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -9,3 +9,22 @@
   margin: 10px;
   padding: 6px;
 }
+
+
+.company-logo {
+  max-width: 90px;
+  max-height: 90px;
+
+}
+
+.company-banner img {
+  min-height: 150px;
+  width:750px;
+
+}
+
+.banner img {
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
