--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,3 +1,59 @@
-<div class="container">
-<h1><%= @organization.company_name  %></h1>
+
+<% if @organization.logo.present? %>
+  <% logo_path = cl_image_path @organization.logo %>
+  <% else %>
+  <% logo_path = "http://placehold.it/70x70" %>
+<% end %>
+
+
+<% if @organization.image_banner.present? %>
+  <% banner_path = cl_image_path @organization.image_banner %>
+  <% else %>
+  <% banner_path = 'http://res.cloudinary.com/dkkvtcelc/image/upload/v1523819608/cover_example.jpg' %>
+<% end %>
+
+<div class="banner">
+<%= image_tag banner_path  %>
+
 </div>
+
+<div class="wrapper">
+  <div class="container">
+    <div class="company-header">
+      <%= image_tag logo_path, class: "company-logo"  %>
+      <h1><%= @organization.company_name  %></h1>
+    </div>
+    <%= link_to 'Back to organizations', organizations_path, class: 'btn btn-primary btn-lg'%>
+    <%= link_to 'Edit info', edit_organization_path(@organization), class: 'btn btn-primary btn-lg'%>
+    <%= link_to "Add Step", new_steplist_path, class: 'btn btn-success btn-lg'  %>
+
+    <% if @org_steplists.any? %>
+      <h2>Steplists for: <%= @organization.company_name %></h2>
+
+      <div class="container steplist-cards-background" style="padding-top: 40px">
+        <% @org_steplists.each do  |steplist|%>
+          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+            <div class="steplist-card-block" >
+              <div class="steplist-card">
+                <div class="steplist-card-body">
+                  <p class="author-name"> <strong>Author:</strong>
+                    <%= "#{steplist.user.first_name.capitalize} #{steplist.user.last_name.capitalize}" %>
+                  </p>
+                  <h5 class="steplist-card-title">
+                    <%= link_to "#{steplist.title.truncate(50)}",steplist_path(steplist) %>
+                  </h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+      <% else %>
+      <h2>Be the firstone to add a steplist for: "<%= @organization.company_name %>"</h2>
+
+      <%= link_to "Add Step", new_steplist_path, class: 'btn btn-success btn-lg'  %>
+    <%end%>
+
+  </div>
+</div>
+
