--- a/app/views/steplists/index.html.erb
+++ b/app/views/steplists/index.html.erb
@@ -1,24 +1,31 @@
 <div style="background-color: #F5F7FB; ">
 
-<div class="steplist-show-header" style="background-color: white">
-  <div class="container steplist-header-text-container">
-  <h2>Browse all steplists</h2>
-</div>
-</div>
-<%= link_to "Add new Organization", new_organization_path, class: 'btn btn-primary btn-lg'  %>
-
-<div class="container steplist-cards-background" style="padding-top: 40px">
-<% @steplists.each do  |steplist|%>
-<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-    <div class="steplist-card-block" >
-      <div class="steplist-card">
-          <div class="steplist-card-body">
-          <p class="author-name"> <strong>Author:</strong> <%= "#{steplist.user.first_name.capitalize} #{steplist.user.last_name.capitalize}" %></p>
-          <h5 class="steplist-card-title"> <%= link_to "#{steplist.title.truncate(50)}",steplist_path(steplist) %></h5>
-          </div>
-      </div>
-      </div>
+  <div class="steplist-show-header" style="background-color: white">
+    <div class="container steplist-header-text-container">
+      <h2>Browse all steplists</h2>
     </div>
-      <% end %>
   </div>
+  <%= link_to "browse organizations", organizations_path, class: 'btn btn-primary btn-lg'  %>
+
+  <%= link_to "Add new Organization", new_organization_path, class: 'btn btn-primary btn-lg'  %>
+
+  <div class="container steplist-cards-background" style="padding-top: 40px">
+    <% @steplists.each do  |steplist|%>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+        <div class="steplist-card-block" >
+          <div class="steplist-card">
+            <div class="steplist-card-body">
+              <p class="author-name"> <strong>Author:</strong>
+                <%= "#{steplist.user.first_name.capitalize} #{steplist.user.last_name.capitalize}" %>
+              </p>
+              <h5 class="steplist-card-title">
+                <%= link_to "#{steplist.title.truncate(50)}",steplist_path(steplist) %>
+              </h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
 </div>
