--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -1,6 +1,7 @@
 .image-popup-container, .image-container {
   margin: 10px;
   padding: 6px;
+}
 .image-popup-row {
 
   flex-wrap: wrap;
@@ -36,7 +37,7 @@
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-.image-popup-column {
+  .image-popup-column {
     flex: 100%;
     max-width: 100%;
   }
