--- a/app/views/steplists/index.html.erb
+++ b/app/views/steplists/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 </div>
 
-<div class="container steplist-cards-background" style="padding-top: 40px">
+<div class="container steplist-cards-background" style="padding-top: 40; min-height: 100vh;">
 
 <% @steplists.each do  |steplist|%>
 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
