--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,8 +1,7 @@
+<div style="min-height: 100vh">
+
 <div class="container">
   <h2>Resend confirmation instructions</h2>
-
-
-
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
       <!-- Insert form here -->
@@ -22,4 +21,6 @@
 
     </div>
   </div>
+</div>
+
 </div>
