--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,5 @@
+<div style="min-height: 100vh">
+
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
@@ -22,4 +24,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
