--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<div style="min-height: 100vh">
+
 <div class="container">
    <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
@@ -11,10 +13,6 @@
             <%= f.input :first_name, required: true, autofocus: true %>
             <%= f.input :last_name, required: true, autofocus: true %>
             <%= f.input :user_photo, label: 'Add a Profile Pic' %>
-
-
-
-
             <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
             <%= f.input :password_confirmation, required: true %>
           </div>
@@ -27,4 +25,6 @@
       </div>
     </div>
   </div>
+</div>
+
 </div>
