trying to fix timeline

--- a/app/views/shared/_step_card.html.erb
+++ b/app/views/shared/_step_card.html.erb
@@ -11,7 +11,6 @@
       <div class="row">
         <h4 id="step-title-timeline"><%= current_user == @steplist.user ? best_in_place(step, :title, as: :input) : step.title  %> </h4>
       </div>
-
     </a>
     <!-- DATE AND EDIT ICONS -->
     <% if current_user == @steplist.user %>
@@ -20,6 +19,8 @@
       <%= link_to '<i class="fa fa-pencil" id="step-edit-icon"></i>'.html_safe, edit_step_path(step) %>
       <%= link_to '<i class="fa fa-trash" id="step-delete-icon"></i>'.html_safe, step_path(step), method: :delete,data: {confirm: "No going Back"} %>
     </span>
+
+        <span class="cd-date">
     <% end %>
   </div>
 </div>
