--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -9,7 +9,7 @@
 // General style
 $font-family-sans-serif:  'Source Sans Pro', sans-serif;;
 $headings-font-family:    'Source Sans Pro', sans-serif;;
-$body-bg:                 #d3d1d1;
+$body-bg:                 white;
 $font-size-base: 18px;
 
 // Colors
