--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
 
+  <div class="content-space">
       <%= yield %>
+  </div>
 
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
