--- a/app/views/shared/_form_steplist.html.erb
+++ b/app/views/shared/_form_steplist.html.erb
@@ -2,9 +2,9 @@
   <%= f.input :title, label: 'Title for your Steplist', placeholder: "What is the outcome of this steplist?" %>
   <%= f.input :description ,label: "Steplist description", placeholder: 'Why is this steplist important?'%>
 
-  <% if current_user.organization.present? %>
+  <% if current_user.organizations.present? %>
 
-    <%= f.input :organization, label: 'Add this steplist to one of you organizations', collection: current_user.organization  %>
+    <%= f.input :organization, label: 'Add this steplist to one of you organizations', collection: current_user.organizations.map {|org| [org.company_name, org.id]}  %>
   <% end %>
 
   <%= f.submit %>
