First modification for user forms

--- a/app/assets/stylesheets/components/_form-users.scss
+++ b/app/assets/stylesheets/components/_form-users.scss
@@ -1,6 +1,6 @@
 .form-login {
 
-  background: white;
+  background: $stepify-light-gray;
   padding: 10px 20px;
   margin-top: 50px;
   border-radius: 8px;
