--- a/app/assets/stylesheets/components/_form-users.scss
+++ b/app/assets/stylesheets/components/_form-users.scss
@@ -5,6 +5,7 @@
   margin-top: 50px;
   border-radius: 8px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+  margin-bottom: 50px;
   h2 {
     font-size: 25px;
     font-weight: bold;
