--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -26,3 +26,12 @@ $border-radius-large: 2px;
 $border-radius-small: 2px;
 
 // Override other variables below!
+.modal-header{
+word-wrap: break-word;
+margin-right: 10px;
+}
+
+.modal-body{
+word-wrap: break-word;
+margin-right: 10px;
+}
