--- a/app/views/steplists/index.html.erb
+++ b/app/views/steplists/index.html.erb
@@ -9,16 +9,18 @@
 <div class="container steplist-cards-background" style="padding-top: 40; min-height: 100vh;">
 
 <% @steplists.each do  |steplist|%>
+<%= link_to steplist_path(steplist) do %>
 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
     <div class="steplist-card-block" >
       <div class="steplist-card">
           <div class="steplist-card-body">
           <p class="author-name"> <strong>Author:</strong> <%= "#{steplist.user.first_name.capitalize} #{steplist.user.last_name.capitalize}" %></p>
-          <h5 class="steplist-card-title"> <%= link_to "#{steplist.title.truncate(50)}",steplist_path(steplist) %></h5>
+          <h5 class="steplist-card-title"><%= steplist.title.truncate(50) %></h5>
           </div>
       </div>
       </div>
     </div>
+      <% end %>
       <% end %>
   </div>
 </div>
