Added name to dropbox in navbar avatar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,6 +12,9 @@
               <%= image_tag "avatar_test.png", class: "stepify-avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
             <% end %>
             <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+              <li style="margin-left: 20px">
+                <%= current_user.first_name.capitalize %>
+              </li>
               <li>
                 <%= link_to edit_user_registration_path do %>
                 <%= t(".profile", default: "Profile") %>
