Fixed images in modal + Add button at the end of timelines + End node at the end of timelines

--- a/app/assets/stylesheets/components/_step-card.scss
+++ b/app/assets/stylesheets/components/_step-card.scss
@@ -15,6 +15,14 @@
   color: white;
 }
 
+.plus-icon{
+  .fa{
+  padding-left: 20px;
+  padding-top: 2px;
+  font-size: 20px;
+  color: white;
+  }
+}
 #content-icon{
   color: $stepify-light-gray;
 }
