--- a/app/views/pages/my_pins.html.erb
+++ b/app/views/pages/my_pins.html.erb
@@ -1,16 +1,13 @@
 <div style="background-color: #F5F7FB; ">
   <div class="steplist-show-header" style="background-color: white">
     <div class="container steplist-header-text-container">
-      <h2>Browse all steplists</h2>
+      <h2>My pins</h2>
     </div>
   </div>
-  <%= link_to "browse organizations", organizations_path, class: 'btn btn-primary btn-lg'  %>
-  <%= link_to "Add new Organization", new_organization_path, class: 'btn btn-primary btn-lg'  %>
-  <%= link_to "My pins", my_pins_path, class: 'btn btn-primary btn-lg'  %>
   <div class="container steplist-cards-background" style="padding-top: 40; min-height: 100vh;">
     <div class="container steplist-cards-background" style="padding-top: 40px">
-      <% @steplists.each do  |steplist|%>
-        <%= render 'shared/steplist_card', steplist: steplist %>
+      <% @my_pins.each do |pin| %>
+        <%= render 'shared/steplist_card', steplist: pin.steplist %>
       <% end %>
     </div>
   </div>
