--- a/app/views/steplists/show.html.erb
+++ b/app/views/steplists/show.html.erb
@@ -19,7 +19,7 @@
   </ul>
 </div>
 
-<div style="background-color: #F5F7FB;">
+<div style="background-color: #838C92;">
   <!-- RENDER LÍNEA DE TIEMPO -->
   <section id="cd-timeline" class="cd-container">
     <% @steplist.steps.order(created_at: :asc).each do |step|  %>
