--- a/app/views/shared/_step_card.html.erb
+++ b/app/views/shared/_step_card.html.erb
@@ -9,9 +9,8 @@
   <div>
     <div class="cd-timeline-content bounceIn">
       <div class="row " data-toggle="modal" data-target="#Modalpopup<%= step.id%>">
-        <h4 id="step-title-timeline"><%= current_user == @steplist.user ? best_in_place(step, :title, as: :input) : step.title  %> </h4>
+        <h4 id="step-title-timeline" style="z-index: 2"><%= current_user == @steplist.user ? best_in_place(step, :title, as: :input) : step.title  %> </h4>
       </div>
-    </a>
     <!-- DATE AND EDIT ICONS -->
     <% if current_user == @steplist.user %>
     <span class="cd-date">
