Added step counter

--- a/app/assets/stylesheets/components/_step-card.scss
+++ b/app/assets/stylesheets/components/_step-card.scss
@@ -49,3 +49,12 @@
   font-size: 21px;
   margin-top: -10px;
 }
+
+body{
+   counter-reset: section;
+}
+
+.step-numerator::before{
+    counter-increment: section;
+    content: counter(section) ") ";
+}
