Fixed edit and destroy buttons

--- a/app/assets/stylesheets/components/_step-card.scss
+++ b/app/assets/stylesheets/components/_step-card.scss
@@ -39,13 +39,13 @@
 }
 
 #step-delete-icon{
-  color: $red;
+  color: #FFABAB;
   font-size: 20px;
   margin-top: -10px;
 }
 
 #step-edit-icon{
-  color: $blue;
+  color: #8DD1FF;
   font-size: 21px;
   margin-top: -10px;
 }
