--- a/app/assets/stylesheets/pages/_organization-show.scss
+++ b/app/assets/stylesheets/pages/_organization-show.scss
@@ -14,15 +14,20 @@
   min-height: 80px;
   overflow: hidden;
   z-index: -1;
+
 }
 
 .organization-logo-container{
-
+border-radius: 5px;
+border-style: solid;
+border-color: gray;
+margin-top: -80px;
+  width: 200px;
 }
 
 .organization-logo{
     max-height: 150px;
-    margin-top: -80px;
+    max-width: 100%;
     z-index: 1;
 }
 
