--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -22,21 +22,22 @@
 
     <div class="container">
       <div class="organization-header">
-
         <div class="organization-logo-container">
           <div> <%= image_tag logo_path, class: "organization-logo" %></div>
-          <div class="row"><h1 style="float: left;"><%= @organization.company_name %></h1></div>
+          <div class="row"><h2><%= @organization.company_name %></h2></div>
         </div>
 
-
-        <%= link_to 'Back to organizations', organizations_path, class: 'btn btn-primary btn-sm'%>
+        </div>
+        <div class="organization-button-container">
+        <%= link_to 'Back to organizations', organizations_path, class: 'btn btn-primary btn-xs'%>
         <% if @organization.users.include?(current_user) && OrganizationUser.find_by(organization: @organization, user: @user).admin? %>
-        <%= link_to 'Edit Companyinfo', edit_organization_path(@organization), class: 'btn btn-primary btn-sm'%>
+        <%= link_to 'Edit Companyinfo', edit_organization_path(@organization), class: 'btn btn-primary btn-xs'%>
         <% end %>
-
         <% if @organization.users.include?(current_user) %>
-        <%= link_to "Add Step to this organization", new_steplist_path, class: 'btn btn-success btn-sm'  %>
+        <%= link_to "Add Step to this organization", new_steplist_path, class: 'btn btn-success btn-xs'  %>
         <% end %>
+      </div>
+
 
         <!-- DISPLAY COMPANY STEPLISTS -->
 
