--- a/app/assets/stylesheets/pages/_organization-show.scss
+++ b/app/assets/stylesheets/pages/_organization-show.scss
@@ -1,16 +1,27 @@
 .organization-header{
   // display: flex;
   // justify-content: space_between;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.organization-header h1 {
+.organization-header h2 {
   text-align: center;
+}
+
+.organization-button-container{
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .organization-banner-container{
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 250px;
   min-height: 80px;
   overflow: hidden;
   z-index: -1;
@@ -18,11 +29,13 @@
 }
 
 .organization-logo-container{
-border-radius: 5px;
 border-style: solid;
-border-color: gray;
-margin-top: -80px;
+border-color: $stepify-light-gray;
+border-width: thin;
+box-shadow: 0 5px 0 $stepify-salmon;
+margin-top: -100px;
   width: 200px;
+    margin-bottom: 30px;
 }
 
 .organization-logo{
