Fixed organization profile btn sizes

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -63,7 +63,7 @@
         </div>
         <% else %>
         <h2>Be the firstone to add a steplist for: "<%= @organization.company_name %>"</h2>
-        <%= link_to "Add Step", new_steplist_path, class: 'btn btn-success btn-lg'  %>
+        <%= link_to "Add Step", new_steplist_path, class: 'btn btn-success btn-sm'  %>
         <%end%>
 
       </div>
