Added tab navegation. Still Fixing it

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,7 +9,7 @@ $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
 $stepify-background: #BDC9C7;
-$stepify-salmon: #FD896D;
+$stepify-salmon: #FF6F5C;
 $stepify-dark-salmon: #C96142;
 $stepify-gray: #999999;
 $stepify-dark-gray: #565252;
