--- a/app/views/shared/_form_steplist.html.erb
+++ b/app/views/shared/_form_steplist.html.erb
@@ -1,10 +1,11 @@
 <%= simple_form_for @steplist do |f| %>
   <%= f.input :title, label: 'Title for your Steplist', placeholder: "What is the outcome of this steplist?" %>
   <%= f.input :description ,label: "Steplist description", placeholder: 'Why is this steplist important?'%>
+  <%= f.input :user_tags , label: "Add tags to find your steplists", placeholder: 'This keywords help everyone find your steplist',as: :text %>
 
   <% if current_user.organizations.present? %>
 
-    <%= f.input :organization, label: 'Add this steplist to one of you organizations', collection: current_user.organizations.map {|org| [org.company_name, org.id]}  %>
+    <%= f.input :organization, label: 'Add this steplist to one of you organizations',collection: current_user.organizations.map {|org| [org.company_name, org.id]}  %>
     <%= f.input :private,  as: :select %>
   <% end %>
 
