--- a/app/views/shared/_navbar-stepify.html.erb
+++ b/app/views/shared/_navbar-stepify.html.erb
@@ -9,7 +9,7 @@
     <% if user_signed_in? %>
     <!-- Links when logged in////////// -->
 
-    <li class='last'><%= link_to "My Steplists", steplists_path(my_steplists: true), class: "navbar-wagon-item navbar-wagon-link" %>
+    <li class='last'><%= link_to "My Steplists", my_lists_path, class: "navbar-wagon-item navbar-wagon-link" %>
     </li>
 
     <li class='last'><%= link_to "Dashboard", dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %>
@@ -30,7 +30,7 @@
 
     <li class='first'>
       <div class="search-bar">
-        <%= form_tag steplists_path,method: :get do %>
+        <%= form_tag search_path,method: :get do %>
         <%= text_field_tag :query,
         params[:query],
         class: "form-control", placeholder: 'See steps for...', style: 'background-color: #565252;
