--- a/app/views/pages/my_lists.html.erb
+++ b/app/views/pages/my_lists.html.erb
@@ -4,6 +4,8 @@
       <h1>Step lists for <%= current_user.first_name.capitalize %></h1>
     </div>
   </div>
+  <%= render 'shared/tabs_index_bootstrap_tabs' %>
+
 
 
   <div class="container steplist-cards-background" style="padding-top: 40; min-height: 100vh;">
