--- a/app/views/pages/my_pins.html.erb
+++ b/app/views/pages/my_pins.html.erb
@@ -4,6 +4,8 @@
       <h2>My pins</h2>
     </div>
   </div>
+  <%= render 'shared/tabs_index_bootstrap_tabs' %>
+
   <div class="container steplist-cards-background" style="padding-top: 40; min-height: 100vh;">
     <div class="container steplist-cards-background" style="padding-top: 40px">
       <% @my_pins.each do |pin| %>
