--- a/app/views/steplists/index.html.erb
+++ b/app/views/steplists/index.html.erb
@@ -5,12 +5,18 @@
     </div>
   </div>
 
-<%= render 'shared/tabs_index' %>
+  <% # render 'shared/tabs_index_bootstrap_togglable_tabs' %>
+  <%= render 'shared/tabs_index_bootstrap_tabs' %>
+
+
+
   <div class="container steplist-cards-background" style="padding-top: 40; min-height: 100vh;">
+
     <div class="container steplist-cards-background" style="padding-top: 40px">
-      <% @steplists.each do  |steplist|%>
-        <%= render 'shared/steplist_card', steplist: steplist %>
-      <% end %>
+
+      <%  @steplists.each do  |steplist|%>
+        <%=  render 'shared/steplist_card', steplist: steplist %>
+      <%  end %>
     </div>
   </div>
 </div>
