--- a/app/views/visualizations/dashboard.html.erb
+++ b/app/views/visualizations/dashboard.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h2><%= "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize} Dashboard"%></h2>
 
-    <table class="table">
+    <table class="table"g
       <tr>
         <th>
           Steps visited
