--- a/app/views/shared/_tabs_index_bootstrap_tabs.html.erb
+++ b/app/views/shared/_tabs_index_bootstrap_tabs.html.erb
@@ -1,11 +1,13 @@
-<ul class="nav nav-tabs ">
-  <li role="presentation" class="<%= current_page?(root_path)? 'active': '' %>">
-    <a href='<%= root_path %>'>All Steplists</a>
-  </li>
-  <li role="presentation" class="<%= current_page?(my_lists_path)? 'active': '' %>" >
-    <a href='<%= my_lists_path %>'>My Steplists</a>
-  </li>
-  <li role="presentation" class="<%= current_page?(my_pins_path)? 'active': '' %>">
-    <a href='<%= my_pins_path %>'>My Pins</a>
-  </li>
-</ul>
+<%if user_signed_in? %>
+  <ul class="nav nav-tabs ">
+    <li role="presentation" class="<%= current_page?(root_path)? 'active': '' %>">
+      <a href='<%= root_path %>'>All Steplists</a>
+    </li>
+    <li role="presentation" class="<%= current_page?(my_lists_path)? 'active': '' %>" >
+      <a href='<%= my_lists_path %>'>My Steplists</a>
+    </li>
+    <li role="presentation" class="<%= current_page?(my_pins_path)? 'active': '' %>">
+      <a href='<%= my_pins_path %>'>My Pins</a>
+    </li>
+  </ul>
+<% end %>
