--- a/app/views/shared/_navbar-stepify.html.erb
+++ b/app/views/shared/_navbar-stepify.html.erb
@@ -1,9 +1,11 @@
 <div id='cssmenu'>
-  <ul>
+  <ul class="">
+
     <li class='last' id="stepify-logo"><%= link_to root_path, class: "navbar-wagon-brand" do %>
-      <%= image_tag "logo4.png"%>
+        <%= image_tag "logo4.png"%>
       <% end %>
     </li>
+
 
     <li class='first'>
       <div class="search-bar">
