--- a/app/views/shared/_step_card.html.erb
+++ b/app/views/shared/_step_card.html.erb
@@ -8,7 +8,7 @@
   <!-- STEP BLOCK CONTENT -->
   <div>
     <div class="cd-timeline-content bounceIn">
-      <div class="row " data-toggle="modal" data-target="#Modalpopup<%= step.id%>">
+      <div class="row " data-toggle="modal" data-target="#Modalpopup<%= step.id%>" id= "locate<%=step.id%>">
         <h4 class="step-numerator" id="step-title-timeline" style="z-index: 2"><%= current_user == @steplist.user ? best_in_place(step, :title, as: :input) : step.title  %></h4>
 
       </div>
